--- a/index.html
+++ b/index.html
@@ -1,5 +1,175 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Resume</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            display: flex;
+            max-width: 800px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .left-column {
+            flex: 1;
+            padding: 20px;
+            text-align: center;
+            background-color: #0066cc;
+            color: #fff;
+        }
+
+        .right-column {
+            flex: 2;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #0066cc;
+        }
+
+        h1, h2, h3 {
+            color: #0066cc;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+
+        .skills {
+            font-weight: bold;
+            color: #009900;
+        }
+
+        h3 {
+            color: #0066cc;
+        }
+
+        img {
+            border-radius: 50%;
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+
+    </style>
+</head>
 <body>
-<h1>Hello New Zealand </h1>
+
+    <div class="container">
+        <div class="left-column">
+            <img src="profile_picture.jpg" alt="Profile Picture">
+            <h2>Your Name</h2>
+            <p>Web Developer</p>
+
+            <!-- Additional Sections -->
+            <section>
+                <h3>Personal Details</h3>
+                <p>Date of Birth: DD/MM/YYYY</p>
+                <p>Address: Your Address</p>
+            </section>
+
+            <section>
+                <h3>Awards</h3>
+                <p>Award Name: Description of the award received.</p>
+                <!-- Add more awards as needed -->
+            </section>
+
+            <section>
+                <h3>Expert Technologies</h3>
+                <p>Technology 1: Proficient</p>
+                <p>Technology 2: Intermediate</p>
+                <!-- Add more technologies as needed -->
+            </section>
+        </div>
+
+        <div class="right-column">
+            <section>
+                <h2>Contact Information</h2>
+                <ul>
+                    <li>Email: your.email@example.com</li>
+                    <li>Phone: (123) 456-7890</li>
+                    <li>LinkedIn: linkedin.com/in/yourname</li>
+                    <li>GitHub: github.com/yourname</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Skills</h2>
+                <ul class="skills">
+                    <li>HTML5, CSS3</li>
+                    <li>JavaScript (ES6+)</li>
+                    <li>React.js, Angular</li>
+                    <li>Node.js</li>
+                    <li>SQL, MongoDB</li>
+                    <li>Git, GitHub</li>
+                    <li>Responsive Web Design</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Experience</h2>
+                <h3>Software Developer - ABC Company</h3>
+                <p>Worked on developing and maintaining web applications using React.js and Node.js.</p>
+                <p>Collaborated with cross-functional teams to deliver high-quality software solutions.</p>
+            </section>
+
+            <!-- Additional Sections -->
+            <section>
+                <h2>Educational Qualification</h2>
+                <h3>Degree Earned - University Name</h3>
+                <p>Year of Graduation</p>
+                <!-- Add more education details as needed -->
+            </section>
+
+            <section>
+                <h2>Professional Qualification</h2>
+                <h3>Professional Certification - Certification Body</h3>
+                <p>Year of Certification</p>
+                <!-- Add more professional qualification details as needed -->
+            </section>
+
+            <section>
+                <h2>Positions</h2>
+                <h3>Position Title - Company Name</h3>
+                <p>Start Date - End Date</p>
+                <p>Brief description of responsibilities and achievements.</p>
+                <!-- Add more position details as needed -->
+            </section>
+
+            <section>
+                <h2>Expert Technologies</h2>
+                <p>Technology 3: Advanced</p>
+                <p>Technology 4: Proficient</p>
+                <!-- Add more technologies as needed -->
+            </section>
+        </div>
+    </div>
+
 </body>
 </html>
